fix gap between choice buttons for smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,12 +21,12 @@ body {
 /*Choices layout */
 
 .choices {
-    display: grid;
+    display: flex;
     justify-content: center;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(17rem, 1fr));
     justify-items: center;
     align-items: center;
-    gap: 60px;
+    gap: 30px;
     margin-top: 100px;
 
 
@@ -43,9 +43,11 @@ body {
 
 
 .choice img {
-    width: 250px;
-    height: 250px;
-    resize: both;
+
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+   
 }
 
 .choice:hover {
@@ -116,11 +118,11 @@ body {
     .score-area h2 span {
         font-size: 65%;
     }
-
+}
     @media screen and (max-width: 960px) {
         .heading {
             font-size: 150%;
 
         }
-    }
-}
+   
+    
